--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+flask==0.12
 rasa-core==0.7.3
-rasa-nlu==0.10.1
+rasa-nlu==0.10.4
 spacy==1.9.0
 scikit-learn==0.19.1
 scipy==1.0.0
 sklearn-crfsuite==0.3.6
+pyliblzma==0.5.3
